--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+.pnp
 .pnp.js
+coverage
+build
+.eslintcache
+debug.log
+.netlify
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/img/*[.png][.jpg]
+dist
+docs
+node_modules
+dist
+
+*.css
+*.css.map
