--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "tax",
-  "version": "0.1.0",
+  "name": "lofi-player",
+  "version": "1.0.0-beta",
   "private": true,
+  "author": "Stanley Owen <stanleyowen06@gmail.com>",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/lab": "^5.0.0-alpha.62",
+    "@mui/material": "^5.0.6",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "clean-css-cli": "^5.4.2",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^4.0.3",
+    "sass": "^1.43.4",
+    "web-vitals": "^2.1.2"
   },
+  "homepage": "./",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "tauri": "tauri",
+    "sass": "sass src/App.scss src/App.css",
+    "sass-watch": "sass --watch src/App.scss src/App.css",
+    "start": "yarn sass && react-scripts start",
+    "build": "yarn sass && yarn css:minify && GENERATE_SOURCEMAP=false react-scripts build",
+    "build:win": "yarn sass && yarn css:minify && cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "css:minify": "cleancss -o ./src/App.min.css ./src/App.css",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint -c .eslintrc.yml --ext .tsx ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +53,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "eslint": "^8.1.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
