--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "web-vitals": "^2.1.2"
   },
   "homepage": "./",
+  "main": "./public/electron.js",
   "scripts": {
     "tauri": "tauri",
     "sass": "sass src/App.scss src/App.css",
@@ -34,7 +35,9 @@
     "css:minify": "cleancss -o ./src/App.min.css ./src/App.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint -c .eslintrc.yml --ext .tsx ./src"
+    "lint": "eslint -c .eslintrc.yml --ext .tsx ./src",
+    "dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -58,11 +61,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "electron": "^17.0.0",
+    "electron-is-dev": "^2.0.0",
     "eslint": "^8.1.0",
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "wait-on": "^6.0.0"
   }
 }
