--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "clean-css-cli": "^5.4.2",
+    "electron-is-dev": "^2.0.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,7 @@
     "web-vitals": "^2.1.2"
   },
   "homepage": "./",
-  "main": "./public/electron.js",
+  "main": "public/electron.js",
   "scripts": {
     "tauri": "tauri",
     "sass": "sass src/App.scss src/App.css",
@@ -87,7 +88,6 @@
     "dotenv": "^10.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^22.14.5",
-    "electron-is-dev": "^2.0.0",
     "eslint": "^8.1.0",
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.5.1",
