--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "sass": "^1.43.4",
     "web-vitals": "^2.1.2"
   },
-  "homepage": "./",
   "main": "public/electron.js",
+  "homepage": "./",
   "scripts": {
     "tauri": "tauri",
     "sass": "sass src/App.scss src/App.css",
@@ -39,7 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.yml --ext .tsx ./src",
-    "dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron": "wait-on tcp:3000 && electron ."
   },
   "build": {
