--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "clean-css-cli": "^5.4.2",
     "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.0.1",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
