--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-css-cli": "^5.5.2",
     "electron-is-dev": "^2.0.0",
     "electron-store": "^8.0.1",
+    "exceljs": "^4.3.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
