--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "aspose.cells": "^22.2.0",
     "clean-css-cli": "^5.5.2",
     "electron-is-dev": "^2.0.0",
     "electron-store": "^8.0.1",
     "exceljs": "^4.3.0",
     "firebase": "^9.6.7",
+    "python-shell": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
