Added `posbuild` and `prebuild` Process

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lofi-player",
-  "version": "1.0.0-beta",
+  "name": "sd-app",
+  "version": "1.0.0",
   "private": true,
   "author": "Stanley Owen <stanleyowen06@gmail.com>",
   "dependencies": {
@@ -35,8 +35,8 @@
     "start": "yarn sass && react-scripts start",
     "build": "yarn sass && yarn css:minify && GENERATE_SOURCEMAP=false react-scripts build",
     "build:win": "yarn sass && yarn css:minify && cross-env GENERATE_SOURCEMAP=false react-scripts build",
-    "build:electron": "yarn build && electron-builder",
-    "build:win:electron": "yarn build:win && electron-builder",
+    "build:electron": "node ./scripts/prebuild.js && yarn build && electron-builder && node ./scripts/postbuild.js",
+    "build:win:electron": "node ./scripts/prebuild.js && yarn build:win && electron-builder && node ./scripts/postbuild.js",
     "css:minify": "cleancss -o ./src/App.min.css ./src/App.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -45,6 +45,7 @@
     "electron": "wait-on tcp:3000 && electron ."
   },
   "build": {
+    "productName": "SD App",
     "win": {
       "target": [
         {
