Optimized Code Base Quality

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LoFi Player",
-  "name": "LoFi Streaming",
+  "short_name": "Sales & Distribution App",
+  "name": "Sales & Distribution App",
   "icons": [
     {
       "src": "favicon.ico",
