--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Sales & Distribution App",
+  "short_name": "Sales & Distribution Desktop",
   "name": "Sales & Distribution App",
   "icons": [
     {
