--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
-    "electron": "^18.0.3",
+    "electron": "16.2.2",
     "electron-builder": "^22.14.13",
     "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
